2007-02-12  Christian Persch  <chpe@svn.gnome.org>

	* configure.ac:

	Post-release version bump.

2007-02-12  Christian Persch  <chpe@svn.gnome.org>

	=== Release 2.17.91 ===

	* configure.ac:
	* data/mime-types-permissions.xml:

2007-02-08  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	(GetErrorMessage),(CreateErrorPage):

	Fix a g_free on static string. Also fix a leak.

2007-02-08  Christian Persch  <chpe@svn.gnome.org>

	* embed/mozilla/MozDownload.cpp:

	Guess what? Another mozilla API change!

2007-02-07  Christian Persch  <chpe@svn.gnome.org>

	* data/default-prefs-common.js:

	Set the new pwdmgr pref.

2007-02-02  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-02-02  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-01-30  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add video/x-theora+ogg to list of known mime types.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-tabs-menu.c: (sync_active_tab):

	Make this a regular check, not g_return_if_fail.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/default-prefs-common.js:

	Set bidi caret movement pref to mimick gtk widgets.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):
	
	Fix error condition check.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add more mime types.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (destroy_signal_data), (node_parent_free),
	(ephy_node_destroy), (ephy_node_new_with_id), (real_set_property),
	(ephy_node_set_property), (ephy_node_set_property_string),
	(ephy_node_set_property_boolean), (ephy_node_set_property_long),
	(ephy_node_set_property_int), (ephy_node_set_property_double),
	(ephy_node_set_property_float), (real_add_child),