@@ -1,3 +1,10 @@
+2007-02-23  Christian Persch  <chpe@svn.gnome.org>
+
+	* embed/mozilla/EphyFind.cpp:
+	* embed/mozilla/EphyFind.h:
+
+	What's this? Another mozilla API change!
+
 2007-02-12  Christian Persch  <chpe@svn.gnome.org>
 
 	* configure.ac:
